<?xml version="1.0"?>
<package>
  <name>fcu_io</name>
  <version>0.0.0</version>
  <description>The mavrosflight package</description>

  <author email="daniel.koch@byu.edu">Daniel Koch</author>
  <maintainer email="daniel.koch@byu.edu">Daniel Koch</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>fcu_common</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>fcu_common</run_depend>

  <export>
  </export>
</package>
