<?xml version="1.0"?>
<package format="2">
  <name>rosflight</name>
  <version>0.1.2</version>
  <description>Package for interfacing to the ROSflight autopilot firmware over MAVLink</description>

  <author email="daniel.koch@byu.edu">Daniel Koch</author>
  <maintainer email="daniel.koch@byu.edu">Daniel Koch</maintainer>

  <license>TODO</license>

  <url type="website">http://rosflight.org</url>
  <url type="repository">https://github.com/rosflight/rosflight</url>
  <url type="bugtracker">https://github.com/rosflight/rosflight/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosflight_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>

  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>

  <build_depend>git</build_depend>

  <export>
  </export>
</package>
