<?xml version="1.0"?>
<package format="2">
  <name>rosflight</name>
  <version>1.0.0</version>
  <description>Package for interfacing to the ROSflight autopilot firmware over MAVLink</description>

  <maintainer email="daniel.p.koch@gmail.com">Daniel Koch</maintainer>

  <author email="daniel.p.koch@gmail.com">Daniel Koch</author>
  <author email="superjax08@gmail.com">James Jackson</author>

  <license>BSD</license>

  <url type="website">http://rosflight.org</url>
  <url type="repository">https://github.com/rosflight/rosflight</url>
  <url type="bugtracker">https://github.com/rosflight/rosflight/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS packages -->
  <depend>roscpp</depend>
  <depend>rosflight_msgs</depend>
  <depend>eigen_stl_containers</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>

  <!-- system libraries -->
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>

  <build_depend>git</build_depend>
  <build_depend>pkg-config</build_depend>

  <export>
  </export>
</package>
