<?xml version="1.0"?>
<package format="2">
  <name>rosflight_common</name>
  <version>0.0.0</version>
  <description>The rosflight_common package</description>

  <maintainer email="gary.ellingson@byu.edu">gary</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
