<?xml version="1.0"?>
<package format="2">
  <name>rosflight_firmware</name>
  <version>1.0.0</version>
  <description>Firmware library for software-in-the-loop of the ROSflight ROS stack</description>

  <maintainer email="daniel.p.koch@gmail.com">Daniel Koch</maintainer>

  <author email="daniel.p.koch@gmail.com">Daniel Koch</author>
  <author email="superjax08@gmail.com">James Jackson</author>

  <license>BSD</license>

  <url type="website">http://rosflight.org</url>
  <url type="repository">https://github.com/rosflight/rosflight</url>
  <url type="bugtracker">https://github.com/rosflight/rosflight/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <export>
  </export>
</package>
