<?xml version="1.0"?>
<package format="3">
  <name>rosflight_firmware</name>
  <version>2.0.0</version>
  <description>Firmware library for software-in-the-loop of the ROSflight ROS stack</description>

  <maintainer email="daniel.p.koch@gmail.com">Daniel Koch</maintainer>

  <author email="daniel.p.koch@gmail.com">Daniel Koch</author>
  <author email="superjax08@gmail.com">James Jackson</author>

  <license>BSD</license>

  <url type="website">https://rosflight.org</url>
  <url type="repository">https://github.com/rosflight/rosflight2</url>
  <url type="bugtracker">https://github.com/rosflight/rosflight2/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>boost</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
