<?xml version="1.0"?>
<package format="2">
  <name>rosflight_io</name>
  <version>0.0.0</version>
  <description>Package for interfacing to the ROSflight autopilot firmware over MAVLink</description>

  <author email="daniel.koch@byu.edu">Daniel Koch</author>
  <maintainer email="daniel.koch@byu.edu">Daniel Koch</maintainer>

  <license>TODO</license>

  <url type="website">http://rosflight.org</url>
  <url type="repository">https://github.com/rosflight/rosflight</url>
  <url type="bugtracker">https://github.com/rosflight/rosflight/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rosflight_common</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
