<?xml version="1.0"?>
<package format="3">
  <name>rosflight_io</name>
  <version>2.0.0</version>
  <description>Package for interfacing to the ROSflight autopilot firmware over MAVLink</description>

  <maintainer email="brandonsutherland2@gmail.com">Brandon Sutherland</maintainer>

  <author email="daniel.p.koch@gmail.com">Daniel Koch</author>
  <author email="superjax08@gmail.com">James Jackson</author>
  <author email="brandonsutherland2@gmail.com">Brandon Sutherland</author>

  <license>BSD</license>

  <url type="website">https://rosflight.org</url>
  <url type="repository">https://github.com/rosflight/rosflight</url>
  <url type="bugtracker">https://github.com/rosflight/rosflight/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS packages -->
  <depend>rclcpp</depend>
  <depend>eigen_stl_containers</depend>
  <depend>geometry_msgs</depend>
  <depend>rosflight_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_filters</depend>

  <!-- system libraries -->
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>yaml-cpp</depend>

  <build_depend>git</build_depend>
  <build_depend>pkg-config</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
