<?xml version="1.0"?>
<package format="2">
  <name>rosflight_msgs</name>
  <version>0.1.2</version>
  <description>Message and service definitions for the ROSflight ROS stack</description>

  <maintainer email="daniel.koch@byu.edu">Daniel Koch</maintainer>

  <license>TODO</license>

  <url type="website">http://rosflight.org</url>
  <url type="repository">https://github.com/rosflight/rosflight</url>
  <url type="bugtracker">https://github.com/rosflight/rosflight/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
