<?xml version="1.0"?>
<package format="3">
  <name>rosflight_msgs</name>
  <version>2.0.0</version>
  <description>Message and service definitions for the ROSflight2 ROS 2 stack</description>

  <maintainer email="daniel.p.koch@gmail.com">Daniel Koch</maintainer>

  <author email="daniel.p.koch@gmail.com">Daniel Koch</author>
  <author email="superjax08@gmail.com">James Jackson</author>

  <license>BSD</license>

  <url type="website">http://rosflight.org</url>
  <url type="repository">https://github.com/rosflight/rosflight</url>
  <url type="bugtracker">https://github.com/rosflight/rosflight/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
