<?xml version="1.0"?>
<package format="2">
  <name>rosflight_pkgs</name>
  <version>1.0.0</version>
  <description>ROS interface for the ROSflight autpilot stack</description>

  <maintainer email="daniel.p.koch@gmail.com">Daniel Koch</maintainer>

  <author email="daniel.p.koch@gmail.com">Daniel Koch</author>
  <author email="superjax08@gmail.com">James Jackson</author>

  <license>BSD</license>

  <url type="website">http://rosflight.org</url>
  <url type="repository">https://github.com/rosflight/rosflight</url>
  <url type="bugtracker">https://github.com/rosflight/rosflight/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rosflight</exec_depend>
  <exec_depend>rosflight_firmware</exec_depend>
  <exec_depend>rosflight_msgs</exec_depend>
  <exec_depend>rosflight_sim</exec_depend>
  <exec_depend>rosflight_utils</exec_depend>

  <export>
    <metapackage/>
    <architecture_independent/>
  </export>
</package>
