<?xml version="1.0"?>
<package format="3">
  <name>rosflight_pkgs</name>
  <version>2.0.0</version>
  <description>ROS interface for the ROSflight autopilot stack</description>

  <maintainer email="daniel.p.koch@gmail.com">Daniel Koch</maintainer>

  <author email="daniel.p.koch@gmail.com">Daniel Koch</author>
  <author email="superjax08@gmail.com">James Jackson</author>

  <license>BSD</license>

  <url type="website">http://rosflight.org</url>
  <url type="repository">https://github.com/rosflight/rosflight</url>
  <url type="bugtracker">https://github.com/rosflight/rosflight/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rosflight</exec_depend>
  <exec_depend>rosflight_firmware</exec_depend>
  <exec_depend>rosflight_msgs</exec_depend>
  <exec_depend>rosflight_sim</exec_depend>
  <exec_depend>rosflight_utils</exec_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
